test_suite/tests/ui/duplicate-attribute/rename-rename-de.stderr
error: duplicate serde attribute `rename`
  --> $DIR/rename-rename-de.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

