test_suite/tests/ui/duplicate-attribute/rename-rename-de.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
struct S {
    #[serde(rename = "x")]
    #[serde(rename(deserialize = "y"))]
    x: (),
}

fn main() {}
